--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id="graphic">
         <img src="Graphic.png" alt="This domain is for sale: contact hswiftj@gmail.com with an offer.">
         <div id="url">
-            <h1>www.anonymousbanana.com</h1></div>
-        <a class="link" href="mailto:hswiftj@gmail.com?subject=I'd like to make an offer on your domain: www.anonymousbanana.com"></a>
+            <h1>anonymousbanana.com</h1></div>
+        <a class="link" href="mailto:hswiftj@gmail.com?subject=I'd like to make an offer on your domain: anonymousbanana.com"></a>
     </div>
 </body>
 
